# shorter-rebuttal

./: .gitignore  CUSTOM_RULES_GUIDE.md  IMPLEMENTATION_BLUEPRINT.md  README.md  README_CN.md  main.py  pyproject.toml  sample.md
custom-rule-example/: RUN_CUSTOM_RULES.md  custom_rules_demo.py  custom_rules_input.md  custom_rules_output.md
src/md_char_compressor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mdcompressor/: __init__.py  cli.py  contribution_report.py  metrics.py  models.py  parser_segments.py  pipeline.py  report.py  verifier.py
src/mdcompressor/rules/: __init__.py  base.py  custom_rules.py  markdown_tables.py  markdown_whitespace.py  math_aggressive.py  math_safe.py  registry.py
tests/: test_metrics.py  test_pipeline_aggressive.py  test_pipeline_safe.py  test_verifier.py
ui/: app.py
